# pyvot

./: .gitignore  .sesskey  README.md  main.py  pyproject.toml  test_app.py
.github/workflows/: ci.yaml
datasets/: presidents.parquet  test.parquet
pyvot/: .sesskey  __main__.py  app.py  csv.py  forms.py  widgets.py
pyvot/datasets/: presidents.csv
pyvot/tests/: test_app.py  test_home.py  test_main.py
