[project]
name = "pyvot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-fasthtml>=0.12.19",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
